--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click==8.0.1
 colorama==0.4.4
 cryptography==37.0.2
 distlib==0.3.4
+dj-database-url==0.5.0
 Django==4.0.5
 django-filter==2.0.0
 djangorestframework==3.13.1
